--- a/Moon/app/src/main/AndroidManifest.xml
+++ b/Moon/app/src/main/AndroidManifest.xml
@@ -14,17 +14,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Intro">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Intro" />
-        <activity
-            android:name=".Login.LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Login.Login"></activity>
     </application>
 
 </manifest>
